<!--
  ~  Copyright  2015 Google Inc. All Rights Reserved.
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="error_bluetooth_not_enabled">Bluetooth is not enabled.</string>
    <string name="title_devices">Devices</string>
    <string name="unknown_device">Unknown device</string>

    <!-- Menu items -->
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="action_new">New</string>
    <string name="action_switch">Switch</string>
    <string name="action_rename">Rename Workspace</string>
    <string name="action_stop">Stop</string>
    <string name="action_connect">Connect</string>

    <string name="app_name">BlocklyBot</string>

    <!-- Preference items -->
    <string name="pref_autoattach">AutoAttach</string>
    <string name="pref_autoattach_summ">Auto Attach to the previously selected device on startup</string>
    <string name="pref_filterincompatible">Filter Device List by compatibility</string>
    <string name="pref_filterincompatible_summ">Filter incompatible devices from discovery (takes longer to scan)</string>
    <string name="pref_protocolType">Protocol</string>
    <string-array name="pref_protocolTypes_entries">
        <item>Bluetooth 4.0 (BLE)</item>
        <item>Bluetooth</item>
    </string-array>
    <string-array name="pref_protocolTypes_values">
        <item>ble</item>
        <item>bluetooth</item>
    </string-array>
    <string name="pref_protocolType_default">bluetooth</string>
    <string name="pref_controlType">Controller</string>
    <string-array name="pref_controlTypes_entries">
        <item>Blockly</item>
        <item>Button Panel</item>
    </string-array>
    <string-array name="pref_controlTypes_values">
        <item>blockly</item>
        <item>panel</item>
    </string-array>
    <string name="pref_controlType_default">blockly</string>
</resources>
