<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_sync"
        android:title="@string/pref_autoattach"
        android:summary="@string/pref_autoattach_summ"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="pref_filterincompatible"
        android:title="@string/pref_filterincompatible"
        android:summary="@string/pref_filterincompatible_summ"
        android:defaultValue="false" />
    <ListPreference
        android:key="pref_protocolType"
        android:title="@string/pref_protocolType"
        android:dialogTitle="@string/pref_protocolType"
        android:entries="@array/pref_protocolTypes_entries"
        android:entryValues="@array/pref_protocolTypes_values"
        android:defaultValue="@string/pref_protocolType_default" />
    <ListPreference
        android:key="pref_controlType"
        android:title="@string/pref_controlType"
        android:dialogTitle="@string/pref_controlType"
        android:entries="@array/pref_controlTypes_entries"
        android:entryValues="@array/pref_controlTypes_values"
        android:defaultValue="blockly" />
</PreferenceScreen>